// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`TilesInputGroupTabs > Snapshot tests > should match snapshot with custom className 1`] = `
<div
>

  <div
    class="custom-class"
  >

    <div
      data-scope="tabs"
      data-part="root"
      id="tabs::r2:"
      data-orientation="horizontal"
      dir="ltr"
      data-ods="tabs"
    >

      <div
        data-scope="tabs"
        data-part="list"
        id="tabs::r2::list"
        role="tablist"
        dir="ltr"
        aria-orientation="horizontal"
        data-orientation="horizontal"
        class="_tab-list_HASH_2"
        data-ods="tab-list"
      >

        <div
          class="_tab-list__container_HASH_40"
          tabindex="-1"
        >

          <div
            class="_tab-list__container__tabs_HASH_60"
          >

            <button
              data-scope="tabs"
              data-part="trigger"
              role="tab"
              type="button"
              dir="ltr"
              data-orientation="horizontal"
              data-value="tab1"
              aria-selected="true"
              data-selected=""
              data-focus=""
              aria-controls="tabs::r2::content-tab1"
              data-ownedby="tabs::r2::list"
              data-ssr=""
              id="tabs::r2::trigger-tab1"
              tabindex="0"
              class="_tab_HASH_2"
              data-ods="tab"
            >tab1
            </button
            >

              <button
                data-scope="tabs"
                data-part="trigger"
                role="tab"
                type="button"
                dir="ltr"
                data-orientation="horizontal"
                data-value="tab2"
                aria-selected="false"
                data-ownedby="tabs::r2::list"
                data-ssr=""
                id="tabs::r2::trigger-tab2"
                tabindex="-1"
                class="_tab_HASH_2"
                data-ods="tab"
              >tab2
              </button
              >

                <button
                  data-scope="tabs"
                  data-part="trigger"
                  role="tab"
                  type="button"
                  dir="ltr"
                  data-orientation="horizontal"
                  data-value="tab3"
                  aria-selected="false"
                  data-ownedby="tabs::r2::list"
                  data-ssr=""
                  id="tabs::r2::trigger-tab3"
                  tabindex="-1"
                  class="_tab_HASH_2"
                  data-ods="tab"
                >tab3
                </button
                >
                </div
                >
                </div
                >
                </div
                >
                </div
                >

                  <div
                    class="bg-[--ods-color-primary-050] border border-[--ods-color-primary-100] border-solid border-t-0"
                  >tab1
                  </div
                  >
                  </div
                  >
                  </div
                  >
`;

exports[`TilesInputGroupTabs > Snapshot tests > should match snapshot with custom contentElement 1`] = `
<div
>

  <div
  >

    <div
      data-scope="tabs"
      data-part="root"
      id="tabs::r4:"
      data-orientation="horizontal"
      dir="ltr"
      data-ods="tabs"
    >

      <div
        data-scope="tabs"
        data-part="list"
        id="tabs::r4::list"
        role="tablist"
        dir="ltr"
        aria-orientation="horizontal"
        data-orientation="horizontal"
        class="_tab-list_HASH_2"
        data-ods="tab-list"
      >

        <div
          class="_tab-list__container_HASH_40"
          tabindex="-1"
        >

          <div
            class="_tab-list__container__tabs_HASH_60"
          >

            <button
              data-scope="tabs"
              data-part="trigger"
              role="tab"
              type="button"
              dir="ltr"
              data-orientation="horizontal"
              data-value="tab1"
              aria-selected="true"
              data-selected=""
              data-focus=""
              aria-controls="tabs::r4::content-tab1"
              data-ownedby="tabs::r4::list"
              data-ssr=""
              id="tabs::r4::trigger-tab1"
              tabindex="0"
              class="_tab_HASH_2"
              data-ods="tab"
            >tab1
            </button
            >

              <button
                data-scope="tabs"
                data-part="trigger"
                role="tab"
                type="button"
                dir="ltr"
                data-orientation="horizontal"
                data-value="tab2"
                aria-selected="false"
                data-ownedby="tabs::r4::list"
                data-ssr=""
                id="tabs::r4::trigger-tab2"
                tabindex="-1"
                class="_tab_HASH_2"
                data-ods="tab"
              >tab2
              </button
              >

                <button
                  data-scope="tabs"
                  data-part="trigger"
                  role="tab"
                  type="button"
                  dir="ltr"
                  data-orientation="horizontal"
                  data-value="tab3"
                  aria-selected="false"
                  data-ownedby="tabs::r4::list"
                  data-ssr=""
                  id="tabs::r4::trigger-tab3"
                  tabindex="-1"
                  class="_tab_HASH_2"
                  data-ods="tab"
                >tab3
                </button
                >
                </div
                >
                </div
                >
                </div
                >
                </div
                >

                  <div
                    class="bg-[--ods-color-primary-050] border border-[--ods-color-primary-100] border-solid border-t-0"
                  >

                    <div
                      data-testid="custom-content-tab1"
                    >Custom content for tab1
                    </div
                    >
                    </div
                    >
                    </div
                    >
                    </div
                    >
`;

exports[`TilesInputGroupTabs > Snapshot tests > should match snapshot with custom item types 1`] = `
<div
>

  <div
  >

    <div
      data-scope="tabs"
      data-part="root"
      id="tabs::r6:"
      data-orientation="horizontal"
      dir="ltr"
      data-ods="tabs"
    >

      <div
        data-scope="tabs"
        data-part="list"
        id="tabs::r6::list"
        role="tablist"
        dir="ltr"
        aria-orientation="horizontal"
        data-orientation="horizontal"
        class="_tab-list_HASH_2"
        data-ods="tab-list"
      >

        <div
          class="_tab-list__container_HASH_40"
          tabindex="-1"
        >

          <div
            class="_tab-list__container__tabs_HASH_60"
          >

            <button
              data-scope="tabs"
              data-part="trigger"
              role="tab"
              type="button"
              dir="ltr"
              data-orientation="horizontal"
              data-value="[object Object]"
              aria-selected="true"
              data-selected=""
              data-focus=""
              aria-controls="tabs::r6::content-[object Object]"
              data-ownedby="tabs::r6::list"
              data-ssr=""
              id="tabs::r6::trigger-[object Object]"
              tabindex="0"
              class="_tab_HASH_2"
              data-ods="tab"
            >

              <span
                data-testid="title-1"
                data-selected="true"
              >First
              </span
              >
              </button
              >

                <button
                  data-scope="tabs"
                  data-part="trigger"
                  role="tab"
                  type="button"
                  dir="ltr"
                  data-orientation="horizontal"
                  data-value="[object Object]"
                  aria-selected="true"
                  data-selected=""
                  data-focus=""
                  aria-controls="tabs::r6::content-[object Object]"
                  data-ownedby="tabs::r6::list"
                  data-ssr=""
                  id="tabs::r6::trigger-[object Object]"
                  tabindex="0"
                  class="_tab_HASH_2"
                  data-ods="tab"
                >

                  <span
                    data-testid="title-2"
                    data-selected="true"
                  >Second
                  </span
                  >
                  </button
                  >
                  </div
                  >
                  </div
                  >
                  </div
                  >
                  </div
                  >

                    <div
                      class="bg-[--ods-color-primary-050] border border-[--ods-color-primary-100] border-solid border-t-0"
                    >

                      <div
                        data-testid="content-undefined"
                      >
                      </div
                      >
                      </div
                      >
                      </div
                      >
                      </div
                      >
`;

exports[`TilesInputGroupTabs > Snapshot tests > should match snapshot with custom titleElement 1`] = `
<div
>

  <div
  >

    <div
      data-scope="tabs"
      data-part="root"
      id="tabs::r3:"
      data-orientation="horizontal"
      dir="ltr"
      data-ods="tabs"
    >

      <div
        data-scope="tabs"
        data-part="list"
        id="tabs::r3::list"
        role="tablist"
        dir="ltr"
        aria-orientation="horizontal"
        data-orientation="horizontal"
        class="_tab-list_HASH_2"
        data-ods="tab-list"
      >

        <div
          class="_tab-list__container_HASH_40"
          tabindex="-1"
        >

          <div
            class="_tab-list__container__tabs_HASH_60"
          >

            <button
              data-scope="tabs"
              data-part="trigger"
              role="tab"
              type="button"
              dir="ltr"
              data-orientation="horizontal"
              data-value="tab1"
              aria-selected="true"
              data-selected=""
              data-focus=""
              aria-controls="tabs::r3::content-tab1"
              data-ownedby="tabs::r3::list"
              data-ssr=""
              id="tabs::r3::trigger-tab1"
              tabindex="0"
              class="_tab_HASH_2"
              data-ods="tab"
            >

              <span
                data-testid="custom-title-tab1"
                data-selected="true"
              >Custom tab1
              </span
              >
              </button
              >

                <button
                  data-scope="tabs"
                  data-part="trigger"
                  role="tab"
                  type="button"
                  dir="ltr"
                  data-orientation="horizontal"
                  data-value="tab2"
                  aria-selected="false"
                  data-ownedby="tabs::r3::list"
                  data-ssr=""
                  id="tabs::r3::trigger-tab2"
                  tabindex="-1"
                  class="_tab_HASH_2"
                  data-ods="tab"
                >

                  <span
                    data-testid="custom-title-tab2"
                    data-selected="false"
                  >Custom tab2
                  </span
                  >
                  </button
                  >

                    <button
                      data-scope="tabs"
                      data-part="trigger"
                      role="tab"
                      type="button"
                      dir="ltr"
                      data-orientation="horizontal"
                      data-value="tab3"
                      aria-selected="false"
                      data-ownedby="tabs::r3::list"
                      data-ssr=""
                      id="tabs::r3::trigger-tab3"
                      tabindex="-1"
                      class="_tab_HASH_2"
                      data-ods="tab"
                    >

                      <span
                        data-testid="custom-title-tab3"
                        data-selected="false"
                      >Custom tab3
                      </span
                      >
                      </button
                      >
                      </div
                      >
                      </div
                      >
                      </div
                      >
                      </div
                      >

                        <div
                          class="bg-[--ods-color-primary-050] border border-[--ods-color-primary-100] border-solid border-t-0"
                        >tab1
                        </div
                        >
                        </div
                        >
                        </div
                        >
`;

exports[`TilesInputGroupTabs > Snapshot tests > should match snapshot with default props 1`] = `
<div
>

  <div
  >

    <div
      data-scope="tabs"
      data-part="root"
      id="tabs::r0:"
      data-orientation="horizontal"
      dir="ltr"
      data-ods="tabs"
    >

      <div
        data-scope="tabs"
        data-part="list"
        id="tabs::r0::list"
        role="tablist"
        dir="ltr"
        aria-orientation="horizontal"
        data-orientation="horizontal"
        class="_tab-list_HASH_2"
        data-ods="tab-list"
      >

        <div
          class="_tab-list__container_HASH_40"
          tabindex="-1"
        >

          <div
            class="_tab-list__container__tabs_HASH_60"
          >

            <button
              data-scope="tabs"
              data-part="trigger"
              role="tab"
              type="button"
              dir="ltr"
              data-orientation="horizontal"
              data-value="tab1"
              aria-selected="true"
              data-selected=""
              data-focus=""
              aria-controls="tabs::r0::content-tab1"
              data-ownedby="tabs::r0::list"
              data-ssr=""
              id="tabs::r0::trigger-tab1"
              tabindex="0"
              class="_tab_HASH_2"
              data-ods="tab"
            >tab1
            </button
            >

              <button
                data-scope="tabs"
                data-part="trigger"
                role="tab"
                type="button"
                dir="ltr"
                data-orientation="horizontal"
                data-value="tab2"
                aria-selected="false"
                data-ownedby="tabs::r0::list"
                data-ssr=""
                id="tabs::r0::trigger-tab2"
                tabindex="-1"
                class="_tab_HASH_2"
                data-ods="tab"
              >tab2
              </button
              >

                <button
                  data-scope="tabs"
                  data-part="trigger"
                  role="tab"
                  type="button"
                  dir="ltr"
                  data-orientation="horizontal"
                  data-value="tab3"
                  aria-selected="false"
                  data-ownedby="tabs::r0::list"
                  data-ssr=""
                  id="tabs::r0::trigger-tab3"
                  tabindex="-1"
                  class="_tab_HASH_2"
                  data-ods="tab"
                >tab3
                </button
                >
                </div
                >
                </div
                >
                </div
                >
                </div
                >

                  <div
                    class="bg-[--ods-color-primary-050] border border-[--ods-color-primary-100] border-solid border-t-0"
                  >tab1
                  </div
                  >
                  </div
                  >
                  </div
                  >
`;

exports[`TilesInputGroupTabs > Snapshot tests > should match snapshot with empty items array 1`] = `
<div
>

  <div
  >

    <div
      data-scope="tabs"
      data-part="root"
      id="tabs::r1:"
      data-orientation="horizontal"
      dir="ltr"
      data-ods="tabs"
    >

      <div
        data-scope="tabs"
        data-part="list"
        id="tabs::r1::list"
        role="tablist"
        dir="ltr"
        aria-orientation="horizontal"
        data-orientation="horizontal"
        class="_tab-list_HASH_2"
        data-ods="tab-list"
      >

        <div
          class="_tab-list__container_HASH_40"
          tabindex="-1"
        >

          <div
            class="_tab-list__container__tabs_HASH_60"
          >
          </div
          >
          </div
          >
          </div
          >
          </div
          >

            <div
              class="bg-[--ods-color-primary-050] border border-[--ods-color-primary-100] border-solid border-t-0"
            >
            </div
            >
            </div
            >
            </div
            >
`;

exports[`TilesInputGroupTabs > Snapshot tests > should match snapshot with single item 1`] = `
<div
>

  <div
  >

    <div
      data-scope="tabs"
      data-part="root"
      id="tabs::r5:"
      data-orientation="horizontal"
      dir="ltr"
      data-ods="tabs"
    >

      <div
        data-scope="tabs"
        data-part="list"
        id="tabs::r5::list"
        role="tablist"
        dir="ltr"
        aria-orientation="horizontal"
        data-orientation="horizontal"
        class="_tab-list_HASH_2"
        data-ods="tab-list"
      >

        <div
          class="_tab-list__container_HASH_40"
          tabindex="-1"
        >

          <div
            class="_tab-list__container__tabs_HASH_60"
          >

            <button
              data-scope="tabs"
              data-part="trigger"
              role="tab"
              type="button"
              dir="ltr"
              data-orientation="horizontal"
              data-value="single-tab"
              aria-selected="true"
              data-selected=""
              data-focus=""
              aria-controls="tabs::r5::content-single-tab"
              data-ownedby="tabs::r5::list"
              data-ssr=""
              id="tabs::r5::trigger-single-tab"
              tabindex="0"
              class="_tab_HASH_2"
              data-ods="tab"
            >single-tab
            </button
            >
            </div
            >
            </div
            >
            </div
            >
            </div
            >

              <div
                class="bg-[--ods-color-primary-050] border border-[--ods-color-primary-100] border-solid border-t-0"
              >single-tab
              </div
              >
              </div
              >
              </div
              >
`;
